<resources>
    <string name="app_name">Quiz App</string>
    <string name="edit_questions_button">Edit Questions</string>
    <string name="start_quiz_button">Start Quiz</string>

    <string name="question_list_label">List of Questions</string>
    <string name="question_title_label">Question\:</string>
    <string name="question_hint">Enter your true or false question here.</string>
    <string name="answer_title_label">Correct Answer\:</string>
    <string name="true_choice">True</string>
    <string name="false_choice">False</string>
    <string name="comment_title_label">Explanation or Comment for answer (optional)\:</string>
    <string name="comment_hint">Explain why the answer is true or false.</string>

    <string name="question_editor_label">Question Editor</string>
    <string name="new_question">New Question</string>

    <string name="undo_option">UNDO</string>
    <string name="question_deleted_msg">%1$s deleted!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>