<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/question_title_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_title_label" />

        <EditText
            android:id="@+id/question_editor_TextMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/question_hint"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/question_hint"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/answer_title_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_title_label"
            android:textSize="14sp" />

        <RadioGroup
            android:id="@+id/radioButtonGroup_choices"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton_true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/true_choice"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radioButton_false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/false_choice"
                android:textSize="16sp" />
        </RadioGroup>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>